[gd_scene load_steps=7 format=3 uid="uid://j43cqowhjsf6"]

[ext_resource type="Script" path="res://scripts/ControllerV2.gd" id="1_ojey4"]
[ext_resource type="PackedScene" uid="uid://d1cdc6cilif2a" path="res://nodes/menus/pause_menu.tscn" id="2_1avvc"]
[ext_resource type="PackedScene" uid="uid://dxllibo2xe04" path="res://nodes/menus/Timer.tscn" id="3_mjqi2"]
[ext_resource type="PackedScene" uid="uid://dq15eqjrays08" path="res://nodes/menus/debug.tscn" id="4_1jnl2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nq2yg"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_c0ouk"]
height = 0.96211

[node name="ControllerV2" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
floor_constant_speed = true
script = ExtResource("1_ojey4")

[node name="StandingCylinder" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_nq2yg")

[node name="CrouchingCylinder" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.519, 0)
shape = SubResource("CylinderShape3D_c0ouk")

[node name="CrouchedView" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.51, 0)

[node name="StandingView" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="InsideObject" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.99, 0)
target_position = Vector3(0, 1.98, 0)

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.648, 0)

[node name="Interact" type="RayCast3D" parent="Neck"]
target_position = Vector3(0, 0, -1.5)

[node name="Eyes" type="Node3D" parent="Neck"]

[node name="Camera3D" type="Camera3D" parent="Neck/Eyes"]

[node name="PauseMenu" parent="." instance=ExtResource("2_1avvc")]

[node name="Timer" parent="." instance=ExtResource("3_mjqi2")]

[node name="Debug" parent="." instance=ExtResource("4_1jnl2")]
